--- a/src/view/headlines/Headline.scss
+++ b/src/view/headlines/Headline.scss
@@ -73,8 +73,8 @@
       font-size: 0.9rem;
 
       .site-icon {
-        width: 36px;
-        height: 36px;
+        width: 24px;
+        height: 24px;
       }
     }
 
